# plimsoll

./: .gitignore  ARCHITECTURE.md  BEFORE_AFTER.md  CASE_STUDY.md  CHANGELOG.md  CONTRIBUTING.md  EVAL_PLAN.md  LICENSE  PUBLIC_TRACE_VALIDATION.md  README.md  RISK_REGISTER.md  SCHEMA.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
demo/: README.md  mcp-governor.tape  plimsoll.tape
docs/: BENCHMARK_vs_promptfoo.md  MCP_DEMO.md  RELATED_WORK.md  RELIABILITY.md  policy.schema.json
docs/assets/: architecture.html
examples/: governor_loop_demo.py  public_trace_sources.json
examples/access-request/: agent.py  build_real_otel_trace.py  probes.json  (+1 more)
plimsoll/: __init__.py  __main__.py  adapters.py  cascade.py  cli.py  diff.py  governor.py  governor_mcp.py  io.py  models.py  otel.py  passk.py  policy.py  report.py  rules.py  stats.py
scripts/: build_access_request_demo.py  build_golden.py  build_mcp_governor_session.py  smoke.py  validate_public_fixtures.py
tests/: test_access_request.py  test_cascade.py  test_cli.py  test_diff.py  test_governor.py  test_governor_cli.py  test_governor_completeness.py  test_governor_demo.py  test_governor_mcp_session.py  test_io.py  test_otel.py  test_outputs.py  test_passk.py  test_plan_dry_run.py  test_policy_init.py  test_public_validation.py  test_real_trace.py  test_reliability_curve.py  test_reliability_fixtures.py  test_report.py  test_rules.py  test_stats.py  test_version_sync.py
(+63 files in other folders)
